--- a/README
+++ b/README
@@ -13,7 +13,7 @@ the early 2000's. Neopet's has been around since 1999, so it may have been in ex
 should probably go and play the original if you're serious about playing it.
 * I've no interest in making money out of this. I just felt like making an open game, and don't have
 much imaginiation.
-* I doubt they'll never notice.
+* I doubt they'll even notice.
 * I like asparagus too.
 
 Despite all that, the assets, and text, and story line, and names, and pretty much everything that is
